# variant-calling-pipeline

./: .editorconfig  .env  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
data/genes/: puno1-spikev08.seq.txt  puno1-spikev11.seq.txt  puno1-spikev12_v45.seq.txt  puno1-spikev1v06.seq.txt
src/: main.py
src/Pipeline/: Pipeline.py  __init__.py
src/Pipeline/Command/: AbstractCommand.py  RunCommand.py  WriteFileCommand.py  __init__.py
